--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
         <hr class="line">
         <div class="row">
             <div class="col-md-4">
-                <h2>About me</h2>
+                <h2>About me right now??</h2>
                 <p>I am just a Dreamer.</p>
                 <!-- <h4>Likes:</h4>
+                
                 <p>Your likes.</p>
                 <h4>Dislikes:</h4>
                 <p>Your Dislikes.</p> -->
